test/tasty/neg/src-3/TraitParams.scala
package tastytest

object TraitParams {
  trait Foo(a: String)
}
